deploy/moocstudio/moocstudio-opengauss-website/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: moocstudio-opengauss-website
  name: moocstudio-opengauss-website
