deploy/moocstudio/moocstudio-opengauss-website/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: moocstudio-opengauss-frontend-service
  namespace: moocstudio-opengauss-website
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: moocstudio-opengauss-frontend
  type: ClusterIP
