deploy/moocstudio/moocstudio-opengauss-website/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: moocstudio-opengauss-frontend-ingress
  namespace: moocstudio-opengauss-website
spec:
  tls:
    - hosts:
        - moocstudio.opengauss.org
      secretName: moocstudio-opengauss-frontend-tls
  rules:
    - host: moocstudio.opengauss.org
      http:
        paths:
          - backend:
              serviceName: moocstudio-opengauss-frontend-service
              servicePort: 80
            path: /
